[package]
name = "excode"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = "0.4.0"
# dioxus-desktop = { version = "0.4.0", optional = true }
# dioxus-web = { version = "0.4.0", optional = true }

# [features]
# desktop = ["dep:dioxus-desktop"]
# web = ["dep:dioxus-web"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus-desktop = "0.4.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus-web = "0.4.0"
